# defcon

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  Install.txt  License.txt  MANIFEST.in  README.md  README.rst  appveyor.yml  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: publish-package.yml  run-tests.yml
.travis/: install.sh
Lib/defcon/: __init__.py  errors.py
Lib/defcon/objects/: anchor.py  base.py  cmap.py  color.py  component.py  contour.py  dataSet.py  features.py  font.py  glyph.py  groups.py  guideline.py  image.py  imageSet.py  images.py  info.py  kerning.py  layer.py  layerSet.py  layoutEngine.py  lib.py  point.py  uniData.py
Lib/defcon/pens/: clockwiseTestPointPen.py  decomposeComponentPointPen.py  glyphObjectPointPen.py  reverseContourPointPen.py  transformPointPen.py
Lib/defcon/test/: testAll.py  testTools.py
Lib/defcon/tools/: bezierMath.py  future.py  fuzzyNumber.py  identifiers.py  notifications.py  representations.py  unicodeTools.py
documentation/: .readthedocs.yaml  readme.txt
documentation/source/: conf.py  index.rst
documentation/source/concepts/: externalchanges.rst  notifications.rst  representations.rst  subclassing.rst
documentation/source/objects/: anchor.rst  base.rst  component.rst  contour.rst  features.rst  font.rst  glyph.rst  groups.rst  info.rst  (+7 more)
testData/TestAutoStartPoint.ufo/: fontinfo.plist
testData/TestExternalEditing.ufo/: fontinfo.plist  groups.plist  kerning.plist  lib.plist
tools/: infoObjectGenerator.py  openClosedUniGenerator.py
(+31 files in other folders)
