[bumpversion]
current_version = 0.3.1.dev0
commit = True
tag = False
tag_name = {new_version}
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.(?P<release>[a-z]+)(?P<dev>\d+))?
serialize = 
	{major}.{minor}.{patch}.{release}{dev}
	{major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = final
values = 
	dev
	final

[bumpversion:part:dev]

[bumpversion:file:Lib/defcon/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[aliases]
dist = build_sphinx sdist bdist_wheel
test = pytest

[wheel]
universal = 1

[sdist]
formats = zip

[metadata]
license_file = License.txt

[build_sphinx]
source-dir = documentation/source
build-dir = documentation/build
all_files = 1

[tool:pytest]
minversion = 2.8
testpaths = 
	Lib/defcon
python_files = 
	test_*.py
python_classes = 
	*Test
addopts = 
	-v
	-r a
	--doctest-modules
	--doctest-ignore-import-errors

