[aliases]
dist = build_sphinx sdist bdist_wheel
test = pytest

[sdist]
formats = zip

[metadata]
license_file = License.txt

[build_sphinx]
source-dir = documentation/source
build-dir = documentation/build
all_files = 1

[tool:pytest]
minversion = 2.8
testpaths = defcon
python_files = 
	test_*.py
python_classes = 
	*Test
addopts = 
	-v
	-r a
	--doctest-modules
	--doctest-ignore-import-errors
	--pyargs

[options]
setup_requires = setuptools_scm
